--- a/app/views/patrimonio/lineasCertificaciones/formLineaProducto.scala.html
+++ b/app/views/patrimonio/lineasCertificaciones/formLineaProducto.scala.html
@@ -1,6 +1,6 @@
 @(lineaForm: Form[CertificacionServicioLinea])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <script src="@routes.Assets.at("plugins/jquery.numeric_input.min.js")" type="text/javascript"></script>
 
@@ -18,7 +18,7 @@ $(function(){
 });
 
 function copiarPrecio(){
-	var data = $("#producto_id_modal").serialize(); 
+	var data = $("#producto_id_modal").serialize();
 	var url = '/producto/getPrecio';
 	$.get(url, data, function(data){
 		if(data.success) {
@@ -26,19 +26,19 @@ function copiarPrecio(){
 		}else{
 			alert("No se encuentra el producto.")
 		}
-	});	
+	});
 }
 </script>
 
- <div class="row">		  	
+ <div class="row">
 	@inputText(lineaForm("certificaciones_servicio_id"), 'type -> "hidden")
 	@inputText(lineaForm("linea_orden_id"), 'type -> "hidden")
-	
+
 
 	<div class="col-sm-6">
 		<div class="form-group @if(lineaForm.error("producto_id") != null) {has-error} else {has-required}">
 		<label for="producto_nombre" class="control-label">Producto</label>
-		
+
 			@inputText(lineaForm("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto_modal",'readonly->"readonly")
 			@inputText(lineaForm("producto_id"), 'hidden -> "hidden", 'id -> "producto_id_modal")
 		</div>
@@ -46,25 +46,26 @@ function copiarPrecio(){
 			<div class="text-error">@error.message</div>
 		}
 	</div>
+
 	<div class="col-sm-6">
-	<div class="form-group @if(lineaForm.error("cuenta_analitica_id") != null) {has-error} else {has-required}">
-		<label for="cuenta" class="control-label">Cuenta analitica</label>
-		
-			@inputText(lineaForm("cuentaAnalitica.nombre"), 'class -> "form-control", 'id -> "cuentaAnalitica",'readonly->"readonly")
+		<label for="inputPeriodo" class="control-label">Cuenta analitica</label>
+		<div class="input-group @if(lineaForm.error("cuenta_analitica_id") != null) {has-error} else {has-required}">
+
+			@inputText(lineaForm("cuentaAnalitica.nombre"), 'class -> "form-control", 'id -> "cuentaAnalitica")
 			@inputText(lineaForm("cuenta_analitica_id"), 'hidden -> "hidden", 'id -> "cuentaAnalitica_id")
-			<!-- <span class="input-group-addon">
-				<a href="#" 
-				   id="searchCuentaAnalitica" 
+			<span class="input-group-addon">
+				<a href="#"
+				   id="searchCuentaAnalitica"
 				   class="searchModal"
-				   data-title="Selección de Cuenta Analitica" 
-				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.cuentaAnalitica.simple" 
+				   data-title="Selección de Cuenta Analitica"
+				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.cuentaAnalitica.simple"
 				   data-label="#cuentaAnalitica" data-field="#cuentaAnalitica_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
-			</span> -->
+			</span>
 		</div>
 		@lineaForm("cuenta_analitica_id").error.map{ error =>
 			<div class="text-error">@error.message</div>
@@ -80,7 +81,7 @@ function copiarPrecio(){
 			@lineaForm("precio").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
 	</div>
-		
+
 	<div class="col-sm-3">
 		<label for="cantidad" class="control-label">Cantidad</label>
 		<div class="form-group @if(lineaForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -89,7 +90,7 @@ function copiarPrecio(){
 		</div>
 	</div>
 
-	
+
 	<div class="col-sm-3">
 		<label for="descuento" class="control-label">Descuento (%)</label>
 		<div class="form-group @if(lineaForm.error("descuento") != null) {has-error}">
@@ -98,9 +99,9 @@ function copiarPrecio(){
 	</div>
 	<div class="col-sm-3"><label class="control-label">UDM</label>
 		<div class="form-group @if(lineaForm.error("udm_id") != null) {has-error} else {has-required}">
-			@select(lineaForm("udm_id"), 
-			 Udm.find.all().map { p => p.id.toString -> p.nombre}, 
-			'class -> "form-control select", 
+			@select(lineaForm("udm_id"),
+			 Udm.find.all().map { p => p.id.toString -> p.nombre},
+			'class -> "form-control select",
 			'_default -> "Seleccionar",'readonly->"readonly")
 			@lineaForm("udm_id").error.map{ error => <div class="text-error">@error.message</div> }
 		</div>
@@ -115,33 +116,32 @@ function copiarPrecio(){
 </div>
 <script>
 $( function(){
-	/*if($("#producto_modal").length){
+	if($("#producto_modal").length){
 		var options = {
 				script:"/suggestProducto/",
 				varname:"",
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#producto_id_modal").val(obj.id); 
+				callback: function (obj) {
+											$("#producto_id_modal").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('producto_modal', options);
 	}
-	
+
 	if($("#cuentaAnalitica").length){
 		var options = {
-				script:"/suggestCuentaAnalitica/",
+				script:"/contabilidad/suggestCuentaAnalitica/",
 				varname:"",
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cuentaAnalitica_id").val(obj.id); 
+				callback: function (obj) {
+											$("#cuentaAnalitica_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cuentaAnalitica', options);
-	}*/
+	}
 })
-</script>	
-	
+</script>
