--- a/app/views/dashboard/informeEstadisticoPagoProveedores/informePeriodoProveedor.scala.html
+++ b/app/views/dashboard/informeEstadisticoPagoProveedores/informePeriodoProveedor.scala.html
@@ -9,7 +9,7 @@ totalPagadoOtros:java.math.BigDecimal,
 totalSuperPagado:java.math.BigDecimal
 )
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.math.BigDecimal;var total=new java.math.BigDecimal(0);var totalf=new java.math.BigDecimal(0);var totali=new java.math.BigDecimal(0);
 @import java.util.Map;var li = new java.util.ArrayList[Long];
 
@@ -24,12 +24,12 @@ totalSuperPagado:java.math.BigDecimal
 	}else if(i != null && i.id == 25){
 		classEstado = "pagado"
 	}
-	
+
 	classEstado
 }
- 
+
 @views.html.dashboard.mainDashboard(title = "Informe de pagos por Periodo/Proveedores") {
-    
+
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-7">
@@ -37,7 +37,7 @@ totalSuperPagado:java.math.BigDecimal
 		</div>
 
 		<div class="col-sm-5">
-			
+
 			<!-- <div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-list-alt"></i>
@@ -45,12 +45,12 @@ totalSuperPagado:java.math.BigDecimal
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				    <li role="presentation"><a role="menuitem" id="generarArchivo" 
-				    href="@controllers.dashboard.routes.InformeEstadisticoPagoProveedoresController.informePeriodoProveedorReporte()" 
+				    <li role="presentation"><a role="menuitem" id="generarArchivo"
+				    href="@controllers.dashboard.routes.InformeEstadisticoPagoProveedoresController.informePeriodoProveedorReporte()"
 				    tabindex="-1" href="#">Resumen por Proveedor</a></li>
 				  </ul>
 			</div> -->
-		
+
 		</div>
 	</div>
 </div>
@@ -60,26 +60,26 @@ totalSuperPagado:java.math.BigDecimal
 
 $( function() {
 	/*if($('#periodo_id').val() == ''){
-		alert("Debe ingresar un Periodo");	
+		alert("Debe ingresar un Periodo");
 		false;
 	}else{
 		var baseUrl = $('#generarArchivo').attr('href')
 		$('#generarArchivo').attr('href', baseUrl + '?descarga=&' + window.location.href.slice(window.location.href.indexOf('?') + 1))
-		
-		
+
+
 	}
 	$('#generarArchivo').click( function() {
 		if($('#periodo_id').val() == ''){
-			alert("Debe ingresar un Periodo");	
+			alert("Debe ingresar un Periodo");
 			return false;
-		}else{	
+		}else{
 			var href = $(this).attr('href') + '?descarga=&' + escape(window.location.href.slice(window.location.href.indexOf('?') + 1).split('&'));
 			alert(href);
 			window.location = href;
 			return false;
 		}
 	});*/
-	 
+
 	$('#btn-buscar').click( function() {
 		if($('#fecha_hasta').val() != '' && $('#fecha_desde').val() != '' && $('#periodo').val() != ''){
 			$('#fecha_hasta').val("");
@@ -96,7 +96,7 @@ $( function() {
 			}
 		}
 	});
-	
+
 });
 
 </script>
@@ -104,22 +104,22 @@ $( function() {
 
 @views.html.tags.successError()
     <form action="" method="GET" id="filtroInforme">
-    	 
+
 		<div class="row seccion">
 			<div class="col-sm-4">
 				<label class="control-label">Proveedor
-					<div class="input-group">	
+					<div class="input-group">
 						@inputText(formBuscador("proveedor_nombre"), 'name -> "", 'autofocus -> "autofocus", 'class -> "form-control", 'id -> "proveedor")
 						@inputText(formBuscador("proveedor_id"), 'hidden -> "hidden", 'id -> "proveedor_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchProveedor" 
-										data-title="Selección de Proveedores" 
-										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.proveedor.simple" 
-										data-label="#proveedor" 
+										id="searchProveedor"
+										data-title="Selección de Proveedores"
+										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.proveedor.simple"
+										data-label="#proveedor"
 										data-field="#proveedor_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -128,21 +128,21 @@ $( function() {
 				</label>
 			</div>
 			<div class="col-sm-2">
-				
+
 					<div class="form-group @if(formBuscador.error("periodo_id") != null) {has-error}">
-						<label for="periodo" class="control-label">Periodo</label> 
+						<label for="periodo" class="control-label">Periodo</label>
 						<div class="input-group">
 							@inputText(formBuscador("periodo.nombre"), 'class -> "form-control", 'id -> "periodo")
 							@inputText(formBuscador("periodo.id"),'hidden -> "hidden", 'id -> "periodo_id")
 							<span class="input-group-addon">
 								<a href="#" class="searchModal"
-											id="searchPeriodo" 
-											data-title="Selección de Periodo" 
-											data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-											data-height="650" 
-											data-width="700" 
-											data-listen="modal.seleccion.periodo.simple" 
-											data-label="#periodo" 
+											id="searchPeriodo"
+											data-title="Selección de Periodo"
+											data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+											data-height="650"
+											data-width="700"
+											data-listen="modal.seleccion.periodo.simple"
+											data-label="#periodo"
 											data-field="#periodo_id">
 									<i class="glyphicon glyphicon-search"></i>
 								</a>
@@ -150,7 +150,7 @@ $( function() {
 						</div>
 					</div>
 			</div>
-			
+
 			<div class="col-sm-2 input-group">
 				<label class="control-label">Fecha Pago</label>
 				<div>
@@ -160,13 +160,27 @@ $( function() {
 			</div>
 			<div class="col-sm-2">
 				<label class="control-label">Rubro
-				@select(formBuscador("orden_rubro_id"), 
+				@select(formBuscador("orden_rubro_id"),
 				OrdenRubro.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				 </label>
 			</div>
-		</div>	
-		<div class="row seccion">	
-			
+			<div class="col-sm-2">
+				<label for="deposito" class="control-label">Institucion</label>
+				<div class="input-group">
+					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
+					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
+					<span class="input-group-addon">
+	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
+	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
+	                </span>
+				</div>
+			</div>
+		</div>
+		<div class="row seccion">
+
 			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="nombre" class="control-label">&nbsp;</label>
@@ -179,12 +193,12 @@ $( function() {
 					<a href="@controllers.dashboard.routes.InformeEstadisticoPagoProveedoresController.informePeriodoProveedor()"  class="form-control btn btn-default">Limpiar</a>
 				</div>
 			</div>
-			
-		 
-			
+
+
+
 	</div>
-	
-	 
+
+
     </form>
     <hr>
     <div class="row seccion">
@@ -195,7 +209,7 @@ $( function() {
 	          <p>@utils.NumberUtils.moneda(totalSuperPagado)</p>
 	  	  </div>
 		 </div>
-		 </div>   
+		 </div>
 	</div>
     <hr>
    <!-- <div class="row seccion">
@@ -205,114 +219,114 @@ $( function() {
 	          <h3>Facturado</h3>
 	  	  </div>
 		 </div>
-		 </div>   
+		 </div>
 		  <div class="col-sm-6">
 	  	  <div class="small-box bg-aqua">
 	  	  	<div class="inner">
 	          <h3>Impuestos Pagados</h3>
 	  	  </div>
-		 </div>  
-		 </div>	   
+		 </div>
+		 </div>
     </div>-->
     <div class="row seccion">
 	    <div class="col-sm-4">
 	  	  <div class="small-box bg-green">
 	        <div class="inner">
 	          <h3>Facturado</h3>
-	
+
 	          <p>@utils.NumberUtils.moneda(totalFacturado)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
 	    </div>
-	    
+
 	     <div class="col-sm-4">
 	  	  <div class="small-box bg-green">
 	        <div class="inner">
 	          <h3>Impuestos </h3>
-			   
+
 	          <p>@utils.NumberUtils.moneda(totalImpuestos)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
-	    </div> 
-	    
+	    </div>
+
 	    <div class="col-sm-4">
 	  	  <div class="small-box bg-green">
 	        <div class="inner">
 	          <h3>Pagado</h3>
-	
+
 	          <p>@utils.NumberUtils.moneda(totalPagado)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
 	    </div>
-	    
-	    
+
+
 	    <!--<div class="col-sm-3">
 	  	  <div class="small-box bg-aqua">
 	        <div class="inner">
 	          <h3>Afip</h3>
-	
+
 	          <p>@utils.NumberUtils.moneda(totalPagadoAfip)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
 	    </div>
 	    <div class="col-sm-3">
 	  	  <div class="small-box bg-aqua">
 	        <div class="inner">
 	          <h3>DGR</h3>
-	
+
 	          <p>@utils.NumberUtils.moneda(totalPagadoDgr)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
 	    </div>
-	    
+
 	     <div class="col-sm-2">
 	  	  <div class="small-box bg-aqua">
 	        <div class="inner">
 	          <h3>Otros</h3>
-	
+
 	          <p>@utils.NumberUtils.moneda(totalPagadoOtros)</p>
 	        </div>
 	        <div class="icon">
 	          <i class="ion ion-bag"></i>
 	        </div>
-	         
+
 	      </div>
 	    </div> -->
-	    
-	    
+
+
     </div>
-    
-    
+
+
     <hr>
-    
+
     @if(listaFinal == null || listaFinal.size() == 0) {
-        
+
         <div class="well">
             <em>No se encuentran resultados</em>
         </div>
-        
+
     } else {
-    	
+
     	@if(totalPagadoOtros.compareTo(BigDecimal.ZERO) > 0){
     		<table class="table table-striped table-bordered">
 				<thead>
@@ -320,32 +334,32 @@ $( function() {
 						<td align="center" colspan=""><span style="font-size: 16px;">Embargos</span></td>
 					</tr>
 					<tr style="background: #FFFFFF;  font-weight: bold;">
-						
-						 
-						 
+
+
+
 						<td align="center">Total Pagado</td>
 					</tr>
 				</thead>
 				<tbody>
 				<tr style="background: #FFFFFF;">
-					
+
 					<td align="center">@utils.NumberUtils.moneda(totalPagadoOtros)</td>
 				</tr>
 				</tbody>
 				<tfoot>
 					<tr style="background: #FFFFFF;  font-weight: bold;">
-						 
-						
-						 
+
+
+
 						<td align="center" ><b>Total:</b>@utils.NumberUtils.moneda(totalPagadoOtros)</td>
-						 
+
 					</tr>
 				</tfoot>
-				
+
 			</table>
 		}
-    	
-		@for((key,value) <- listaFinal) { 
+
+		@for((key,value) <- listaFinal) {
 			@{total = new java.math.BigDecimal(0)}
 			<table class="table table-striped table-bordered">
 				<thead>
@@ -356,114 +370,114 @@ $( function() {
 						<td width="30">Fecha</td>
 						<td>Exp.</td>
 						<td>Institucion</td>
-						 
+
 						<td align="center">Total Facturado</td>
-						
+
 						<td align="center">Total Impuestos</td>
 						<td align="center">Total Pagado</td>
 					</tr>
 				</thead>
 				<tbody>
-				
-				
+
+
 				@if(key == "AFIP" || key == "DGR"){
-					
-					@for(z <- value) { 
-						
+
+					@for(z <- value) {
+
 						@{total = total.add(z.total)}
 						@{totalf = total.add(z.total_factura)}
-						
+
 					}
-					
+
 						<tr style="background: #FFFFFF;">
 							<td></td>
 							<td></td>
 							<td></td>
 							<td></td>
 							<td></td>
-							 
+
 							<td align="center">@utils.NumberUtils.moneda(total)</td>
 						</tr>
 						 </tbody>
 						<tfoot>
 							<tr style="background: #FFFFFF;  font-weight: bold;">
-								<td></td> 
+								<td></td>
 								<td></td>
 								<td></td>
 								<td align="center" ></td>
 								<td align="center" ></td>
 								<td align="center" ><b>Total:</b>@utils.NumberUtils.moneda(total)</td>
-								 
+
 							</tr>
 						</tfoot>
-					
+
 				}else{
-					 
-						
+
+
 					@{total = new java.math.BigDecimal(0)}
 					@{totalf = new java.math.BigDecimal(0)}
 					@{totali = new java.math.BigDecimal(0)}
-					
-					
-					
-					@for(z <- value) { 
+
+
+
+					@for(z <- value) {
 						@if(!li.contains(z.factura_id)) {
-						
+
 							<tr style="background: #FFFFFF;">
 								<td>@(utils.DateUtils.formatDate(z.fecha_pago))</td>
 								<td>@(z.expediente.getExpedienteEjercicio())</td>
 								<td>@if(z.deposito !=null ){@z.deposito.nombre}</td>
-								<td align="center">@utils.NumberUtils.moneda(z.factura.getBase())</td> 
-								
-								<td align="center">@utils.NumberUtils.moneda(z.factura.getTotalImpuesto())</td> 
+								<td align="center">@utils.NumberUtils.moneda(z.factura.getBase())</td>
+
+								<td align="center">@utils.NumberUtils.moneda(z.factura.getTotalImpuesto())</td>
 								<td align="center">@utils.NumberUtils.moneda(z.total)</td>
 							</tr>
 							@{total = total.add(z.total)}
 							@{totalf = totalf.add(z.factura.getBase())}
 							@{totali = totali.add(z.factura.getTotalImpuesto())}
-							
+
 							@{var lci = li.add(z.factura_id)}
 						}else{
 							<tr style="background: #FFFFFF;">
 								<td>@(utils.DateUtils.formatDate(z.fecha_pago))</td>
 								<td>@(z.expediente.getExpedienteEjercicio())</td>
 								<td>@if(z.deposito !=null ){@z.deposito.nombre}</td>
-								<td align="center">@utils.NumberUtils.moneda(BigDecimal.ZERO)</td> 
-								
-								<td align="center">@utils.NumberUtils.moneda(BigDecimal.ZERO)</td> 
+								<td align="center">@utils.NumberUtils.moneda(BigDecimal.ZERO)</td>
+
+								<td align="center">@utils.NumberUtils.moneda(BigDecimal.ZERO)</td>
 								<td align="center">@utils.NumberUtils.moneda(z.total)</td>
 							</tr>
 							@{total = total.add(z.total)}
 						}
-						
+
 					}
-				     
-			    
+
+
 			    </tbody>
 				<tfoot>
 					<tr style="background: #FFFFFF;  font-weight: bold;">
-						<td></td> 
-						<td></td> 
-						<td></td> 
+						<td></td>
+						<td></td>
+						<td></td>
 						<td align="center" ><b>Total:</b>@utils.NumberUtils.moneda(totalf)</td>
 						<td align="center" ><b>Total:</b>@utils.NumberUtils.moneda(totali)</td>
 						<td align="center" ><b>Total:</b>@utils.NumberUtils.moneda(total)</td>
-						 
+
 					</tr>
 				</tfoot>
 			}
 			</table>
-		} 
+		}
 	}
-	
-	
+
+
 	<script type="text/javascript">
 	$( function() {
-		$('#searchProveedor,#searchPeriodo').modalSearch();
-		 
-		
+		$('#searchProveedor,#searchPeriodo,#searchDeposito').modalSearch();
+
+
 	});
 	</script>
-	
-	
+
+
 }
