--- a/app/views/compras/lineasAjustesOrdenes/formLineaAjuste.scala.html
+++ b/app/views/compras/lineasAjustesOrdenes/formLineaAjuste.scala.html
@@ -1,6 +1,6 @@
 @(lineaForm: Form[OrdenLineaAjuste],linea:OrdenLineaAjuste)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.tags.successError()
 
@@ -17,7 +17,7 @@ $(function(){
 	<div class="col-sm-8">
 		<label for="producto_nombre" class="control-label">Producto</label>
 		<div class="input-group @if(lineaForm.error("producto_id") != null) {has-error} else {has-required}">
-			
+
 			@inputText(lineaForm("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto")
 			@inputText(lineaForm("producto_id"), 'hidden -> "hidden", 'id -> "producto_id")
 			<span class="input-group-addon"><a href="#" id="searchProducto" data-title="Selección de producto" data-url="@controllers.compras.routes.ProductosController.modalBuscar()" data-height="650" data-width="700" data-listen="modal.seleccion.producto.simple" data-label="#producto" data-field="#producto_id"><i class="glyphicon glyphicon-search"></i></a></span>
@@ -26,20 +26,26 @@ $(function(){
 			<div class="text-error">@error.message</div>
 		}
 	</div>
-	
+	<div class="col-sm-4">
+				<div class="checkbox">
+					<label>
+						suma precio @checkbox(lineaForm("suma_precio"),'checked -> "checked")
+					</label>
+				</div>
+			</div>
 </div>
 
 <div class="row">
 	<div class="col-sm-3">
 		<label class="control-label">Precio</label>
 		<div class="form-group @if(lineaForm.error("precio") != null) {has-error} else {has-required}">
-			
+
 			@inputText(lineaForm("precio"), 'class -> "form-control", 'id -> "precio")
-			
+
 			@lineaForm("precio").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
 	</div>
-		
+
 	<div class="col-sm-2">
 		<label for="cantidad" class="control-label">Cantidad</label>
 		<div class="form-group @if(lineaForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -61,14 +67,14 @@ $(function(){
 			@inputText(lineaForm("cuentaAnalitica.nombre"), 'class -> "form-control", 'id -> "cuentaAnalitica")
 			@inputText(lineaForm("cuenta_analitica_id"), 'hidden -> "hidden", 'id -> "cuentaAnalitica_id")
 			<span class="input-group-addon">
-				<a href="#" 
-				   id="searchCuentaAnalitica" 
+				<a href="#"
+				   id="searchCuentaAnalitica"
 				   class="searchModal"
-				   data-title="Selección de Cuenta Analitica" 
-				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.cuentaAnalitica.simple" 
+				   data-title="Selección de Cuenta Analitica"
+				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.cuentaAnalitica.simple"
 				   data-label="#cuentaAnalitica" data-field="#cuentaAnalitica_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
@@ -84,7 +90,7 @@ $(function(){
 			@inputText(lineaForm("nota"), 'class -> "form-control", 'id -> "nota")
 			@lineaForm("nota").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-	</div>	
+	</div>
 </div>
 
 
@@ -103,13 +109,13 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#producto_id").val(obj.id); 
+				callback: function (obj) {
+											$("#producto_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('producto', options);
 	}
-		
+
 	if($("#cuentaAnalitica").length){
 		var options = {
 				script:"/contabilidad/suggestCuentaAnalitica/",
@@ -117,8 +123,8 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cuentaAnalitica_id").val(obj.id); 
+				callback: function (obj) {
+											$("#cuentaAnalitica_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cuentaAnalitica', options);
