--- a/app/views/compras/lineasAjustesOrdenes/lineaAjuste.scala.html
+++ b/app/views/compras/lineasAjustesOrdenes/lineaAjuste.scala.html
@@ -11,6 +11,7 @@
 	<td>@linea.cantidad</td>
 	<td>@utils.NumberUtils.moneda(linea.precio, 2)</td>
 	<td>@(utils.NumberUtils.moneda(linea.precio.multiply(linea.cantidad), 2))</td>
+	<td align="center">@if(linea.suma_precio == true){SI}else{NO}</td>
 	<td>
 		<!-- <a class="btn btn-default btn-xs eliminarAjuste" href="@controllers.compras.routes.OrdenesLineasAjustesController.eliminar(linea.id)">
 		<i class="glyphicon glyphicon-trash icono-eliminar"></i></a> -->
