--- a/app/views/presupuesto/creditoPresupuestario/verCreditoPresupuestario.scala.html
+++ b/app/views/presupuesto/creditoPresupuestario/verCreditoPresupuestario.scala.html
@@ -74,7 +74,7 @@
 	</div>
 	<hr />
 
-	@views.html.presupuesto.creditoPresupuestario.tabsCreditoPresupuestario(false,creditoPresupuestario)
+	@views.html.presupuesto.creditoPresupuestario.tabsCreditoPresupuestario(false,creditoPresupuestario.id)
 
 	<hr />
 
